--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -3,6 +3,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  color: #FCF6CF;
+}
+
 a {
   color: #00B7FF;
 }
@@ -12,9 +16,13 @@ ul {
   padding-left: 10px;
 }
 
+li {
+  color: #FCF6CF;
+}
+
 .container {
   max-width: 400px;
-  background-color: #eeeeee;
+  background-color: #FFA500;
   border: 1px solid black;
 }
 
